// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Using iconNode component generator > should create a component from an iconNode 1`] = `
<svg
  class="lucide lucide-icon lucide-air-vent"
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M6 12H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"
    key="larmp2"
  />
  <path
    d="M6 8h12"
    key="6g4wlu"
  />
  <path
    d="M18.3 17.7a2.5 2.5 0 0 1-3.16 3.83 2.53 2.53 0 0 1-1.14-2V12"
    key="1bo8pg"
  />
  <path
    d="M6.6 15.6A2 2 0 1 0 10 17v-5"
    key="t9h90c"
  />
</svg>
`;

exports[`Using iconNode component generator > should create multiple components 1`] = `
<div>
  <svg
    class="lucide lucide-icon lucide-air-vent"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 12H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"
      key="larmp2"
    />
    <path
      d="M6 8h12"
      key="6g4wlu"
    />
    <path
      d="M18.3 17.7a2.5 2.5 0 0 1-3.16 3.83 2.53 2.53 0 0 1-1.14-2V12"
      key="1bo8pg"
    />
    <path
      d="M6.6 15.6A2 2 0 1 0 10 17v-5"
      key="t9h90c"
    />
  </svg>
  <svg
    class="lucide lucide-icon lucide-coffee"
    fill="none"
    height="24"
    stroke="blue"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17 8h1a4 4 0 1 1 0 8h-1"
      key="jx4kbh"
    />
    <path
      d="M3 8h14v9a4 4 0 0 1-4 4H7a4 4 0 0 1-4-4Z"
      key="1bxrl0"
    />
    <line
      key="1cr9l3"
      x1="6"
      x2="6"
      y1="2"
      y2="4"
    />
    <line
      key="170wym"
      x1="10"
      x2="10"
      y1="2"
      y2="4"
    />
    <line
      key="1c5f70"
      x1="14"
      x2="14"
      y1="2"
      y2="4"
    />
  </svg>
</div>
`;
